fixing phone overflow

--- a/styles.css
+++ b/styles.css
@@ -117,14 +117,24 @@ h2 {
 CutoutSection for regular laptop/computer screens
 */
 @media(min-width: 350px) and (max-width: 759px) {
+
+    body {
+        overflow: hidden!important;
+    }
+
     .myName {
         font-size: 300%;
     }
+
     h2 {
         font-size: 120%;
     }
 }
 @media(min-width: 760px) and (max-width: 1920px) {
+
+    body {
+        overflow: hidden!important;
+    }
 
     #backgroundSquare {
         width: 0;
@@ -193,6 +203,11 @@ CutoutSection for regular laptop/computer screens
 Section for small phones
 */
 @media screen and (min-height: 300px) and (max-height: 400px) and (max-width: 830px){
+
+    body {
+        overflow: hidden!important;
+    }
+    
     .myName {
         font-size: 150%;
         padding-bottom: 10px;
